gitops/apps/nldoc/api-manifests/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: nldoc-api
  namespace: nldoc
spec:
  selector:
    app: nldoc-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nldoc-api
  namespace: nldoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nldoc-api
  template:
    metadata:
      labels:
        app: nldoc-api
    spec:
      containers:
        - name: api
          image: registry.gitlab.com/logius/nldoc/web/nldoc_api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nldoc-api
  namespace: nldoc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "nldoc-basic-auth"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.nldoc.commonground.nu
      secretName: api-tls
  rules:
    - host: api.nldoc.commonground.nu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nldoc-api
                port:
                  number: 80
